--- a/Angular/angular.json
+++ b/Angular/angular.json
@@ -20,6 +20,10 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
+              "src/assets/images/logo.png",
+              "src/assets/images/favorites-colored.svg",
+              "src/assets/images/favorites-grey.svg",
+              "src/assets/images/Seach_icon-72a7cf.svg",
               "src/assets"
             ],
             "styles": [
