--- a/Angular/angular.json
+++ b/Angular/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Herolo": {
+    "wtw": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Herolo",
+            "outputPath": "dist/wtw",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -58,18 +58,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Herolo:build"
+            "browserTarget": "wtw:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Herolo:build:production"
+              "browserTarget": "wtw:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Herolo:build"
+            "browserTarget": "wtw:build"
           }
         },
         "test": {
@@ -104,7 +104,7 @@
         }
       }
     },
-    "Herolo-e2e": {
+    "wtw-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -112,11 +112,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Herolo:serve"
+            "devServerTarget": "wtw:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Herolo:serve:production"
+              "devServerTarget": "wtw:serve:production"
             }
           }
         },
@@ -132,5 +132,5 @@
       }
     }
   },
-  "defaultProject": "Herolo"
+  "defaultProject": "wtw"
 }
