--- a/Angular/package.json
+++ b/Angular/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^9.1.0",
     "@ngrx/data": "^9.0.0",
     "@ngrx/effects": "^9.0.0",
+    "@ngrx/entity": "^9.0.0",
     "@ngrx/router-store": "^9.0.0",
     "@ngrx/store": "^9.0.0",
     "bootstrap": "^4.3.1",
